Increase version to 1.1.0-SNAPSHOT. Improve and arrange argLine.